--- a/views/admin/pages/user-create.pug
+++ b/views/admin/pages/user-create.pug
@@ -4,7 +4,7 @@ block main
     h1.box-title Tạo tài khoản 
 
     .section-8
-      form#account-admin-create-form
+      form#user-create-form
         .inner-group
           label(class="inner-label" for="fullName") Họ tên
           input(type="text" id="fullName" name="fullName")
@@ -41,4 +41,4 @@ block main
         .inner-button.inner-two-col
           button Tạo mới
       .inner-back
-        a(href=`/${pathAdmin}/account-admin/list`) Quay lại danh sách
+        a(href=`/${pathAdmin}/user/list`) Quay lại danh sách
