--- a/views/admin/partials/sider.pug
+++ b/views/admin/partials/sider.pug
@@ -254,7 +254,7 @@ nav.sider
             i.fa-solid.fa-user-clock
             |  Lịch sử người dùng
         li
-          a.menu2(href=`/${pathAdmin}/account-admin/list`) 
+          a.menu2(href=`/${pathAdmin}/user/list`) 
             i.fa-solid.fa-user
             |  Quản lý người dùng
         li
