--- a/views/admin/pages/user-list.pug
+++ b/views/admin/pages/user-list.pug
@@ -30,7 +30,7 @@ block main
     .inner-wrap
       .inner-change-status(
         change-multi 
-        data-api =`/${pathAdmin}/account-admin/change-multi`
+        data-api =`/${pathAdmin}/user/change-multi`
       )
         .inner-item
           select
@@ -44,7 +44,7 @@ block main
         i(class="fa-solid fa-magnifying-glass")
         input(type="text" placeholder="Tìm kiếm" search)
         .inner-button-create
-          a(href=`/${pathAdmin}/account-admin/create`) + Tạo mới
+          a(href=`/${pathAdmin}/user/create`) + Tạo mới
 
   //- Section 6: Bảng danh sách
   .section-6
@@ -64,7 +64,7 @@ block main
             th Tỉnh/TP
             th Hành động
         tbody
-          each item in accountAdminList
+          each item in accountUserList
             tr
               td.inner-center
                 input(type="checkbox" class="inner-check" check-item = item.id)
@@ -88,9 +88,9 @@ block main
               td #{item.provinceName}
               td
                 .inner-buttons
-                  a.inner-edit(href=`/${pathAdmin}/account-admin/edit/${item.id}`)
+                  a.inner-edit(href=`/${pathAdmin}/user/edit/${item.id}`)
                     i(class="fa-regular fa-pen-to-square")
-                  button.inner-delete(button-delete data-api=`/${pathAdmin}/account-admin/delete/${item.id}`)
+                  button.inner-delete(button-delete data-api=`/${pathAdmin}/user/delete/${item.id}`)
                     i(class="fa-regular fa-trash-can")
   //- Section 7: Pagination
   .section-7
