--- a/views/admin/partials/header.pug
+++ b/views/admin/partials/header.pug
@@ -9,9 +9,11 @@ header.header
       //- span 6
     .inner-account
       .inner-avatar
-        img(src=account.avatar, alt="")
+        img(src="", alt="")
       .inner-text
-        .inner-name #{account.full_name}
-        .inner-role #{account.rolename}
+        .inner-name 
+          //-#{account.full_name}
+        .inner-role 
+          //-#{account.rolename}
     button.inner-button-menu
       <i class="fa-solid fa-bars"></i>
