--- a/views/admin/partials/sider.pug
+++ b/views/admin/partials/sider.pug
@@ -25,6 +25,10 @@ nav.sider
               a.menu(href=`/${pathAdmin}/sauromthong/map/indexth`)
                 i.fa-solid.fa-map-location-dot 
                 | Dữ liệu bản đồ
+            li 
+              a.menu(href=`/${pathAdmin}/sauromthong/dieutrasrt/38/list`)
+                i.fa-solid.fa-magnifying-glass
+                | Điều tra
         li
           div.item_city Nghệ An
             i.fa-solid.fa-chevron-down.arrow
@@ -261,6 +265,14 @@ nav.sider
           a.menu2(href=`/${pathAdmin}/role/list`) 
             i.fa-solid.fa-user-lock
             |  Phân quyền
+        li
+          a.menu2(href=`/${pathAdmin}/about/list`) 
+            i.fa-solid.fa-circle-info
+            |  Giới thiệu
+        li
+          a.menu2(href=`/${pathAdmin}/contact/list`) 
+            i.fa-solid.fa-circle-info
+            |  Liên hệ
     hr
 
     //- li
