--- a/views/admin/layouts/default.pug
+++ b/views/admin/layouts/default.pug
@@ -8,8 +8,10 @@ html
     link(rel="stylesheet", href="https://unpkg.com/filepond@^4/dist/filepond.css")
     link(rel="stylesheet", href="https://unpkg.com/filepond-plugin-image-preview/dist/filepond-plugin-image-preview.css")
     link(rel="stylesheet", href="/admin/assets/css/style.css")
+    <script src="https://cdn.tiny.cloud/1/8zje3bu8nu2qkzxy3tq7srkvvsdjk221dm67lv15ipiti0eg/tinymce/8/tinymce.min.js" referrerpolicy="origin" crossorigin="anonymous"></script>
     script.
       const pathAdmin = "#{pathAdmin}";
+    script(src="/admin/assets/js/tinymce-config.js")
   body
     - if(messages.success)
       div(class="alert alert-success" alert-time = "3000")
