--- a/views/admin/partials/header.pug
+++ b/views/admin/partials/header.pug
@@ -13,5 +13,7 @@ header.header
       .inner-text
         .inner-name #{account.full_name}
         .inner-role #{account.rolename}
+        //- .inner-name Quang Doanh
+        //- .inner-role Admin
     button.inner-button-menu
       <i class="fa-solid fa-bars"></i>
