Tuệ ghep code ngày 22-9 : Mất rừng + thời tiết

--- a/views/admin/pages/contact-answer.pug
+++ b/views/admin/pages/contact-answer.pug
@@ -23,4 +23,4 @@ block main
         .inner-button.inner-two-col
           button Phản hồi
       .inner-back
-        a(href=``) Quay lại danh sách
+        a(href=`/${pathAdmin}/contact/list`) Quay lại danh sách
