--- a/views/admin/partials/header.pug
+++ b/views/admin/partials/header.pug
@@ -9,7 +9,7 @@ header.header
       //- span 6
     .inner-account
       .inner-avatar
-        img(src=account.avatar, alt="")
+        img(src="/admin/assets/images/avatar-default1.svg", alt="")
       .inner-text
         .inner-name #{account.full_name}
         .inner-role #{account.rolename}
