--- a/views/admin/pages/user-create.pug
+++ b/views/admin/pages/user-create.pug
@@ -30,14 +30,10 @@ block main
           label(class="inner-label" for="password") Mật khẩu
           input(type="password" id="password" name="password")
         .inner-group
-          label(class="inner-label" for="province") Tỉnh/TP
-          select(id="province" name="province")
-            each item in Province
-              option(value=item.id) #{item.name}
-        .inner-group.inner-two-col
-          label(class="inner-label" for="avatar") Ảnh đại diện
-          div(class="inner-upload-image")
-            input(type="file" id="avatar" accept="image/*" filepond-image name="avatar")
+          label(class="inner-label" for="ma_tinh") Tỉnh/TP
+          select(id="ma_tinh" name="ma_tinh")
+            each item in Tinh
+              option(value=item.ma_tinh) #{item.ten_tinh}
         .inner-button.inner-two-col
           button Tạo mới
       .inner-back
